# ava-bot

./: .gitignore  .gitmodules  Cargo.toml  package.json  pnpm-lock.yaml  tailwind.config.js
.github/workflows/: release.yml
ava-bot/: Cargo.toml  input.css  tailwind.config.js
ava-bot/src/: error.rs  lib.rs  main.rs
ava-bot/src/handlers/: assistant.rs  chats.rs  mod.rs
ava-bot/templates/blocks/: image.html.j2  speech.html.j2
ava-bot/templates/events/: chat_input_skeleton.html.j2  chat_reply_skeleton.html.j2  signal.html.j2
public/css/: main.css
src/: lib.rs  main.rs
src/handlers/: assistant.rs  chats.rs  common.rs  mod.rs
src/tools/: mod.rs
templates/: base.html.j2  index.html.j2
templates/blocks/: markdown.html.j2
templates/events/: chat_input_skeleton.html.j2  chat_reply.html.j2
